@@ -50,6 +50,9 @@ Version 2.1.2
    - Bugfix/Update: Updated various files from the gettext package
         to version 0.14.1
    - Updated intltool utilities to version 0.33
+   - Removed "config/stamp-h1" (is autogenerated)
+   - Bugfix: Updating popup window
+   - Bugfix: Executing new mail command (when popup is not to be updated)
  * Roland Stigge
    - Bugfix: Encoding of "po/fr.po"
 
